# meter-mind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fleet.example.yaml  justfile  pyproject.toml  pyrefly.toml
.github/workflows/: cd.yml  ci.yml  wif-verify.yml
assets/diagrams/: contract.drawio  mapping.drawio  pipeline.drawio  vision.drawio
deploy/: cloudrun-env.yaml
docs/: agora-system-prompt.md  agora-voice-box-notes.md  arch.md  demo-script.md  hardware-setup.md  idea.md  plan-khoi.md
docs/diagrams/: arch.drawio  metermind-architecture.drawio
docs/prompts/: adk-utility-agent-prompt.md
scripts/: fetch_assets.py  flash_esp32.command  setup-gcp-cicd.sh
src/edgesim/: __init__.py  assemble.py  cli.py  contract.py  device.py  fleet.py  imagery.py  publisher.py  reader.py  scenarios.py
src/hub/: api.py  mcp_prompt.md  mcp_server.py  utility_info.py  web.py
src/hub/core/: contract.py  narrate.py  seed.yaml  service.py
src/hub/db/: models.py  seed_loader.py  session.py
tests/: conftest.py  test_assemble.py  test_contract.py  test_device.py  test_fleet.py  test_hub_api.py  test_hub_contract.py  test_hub_core.py  test_hub_db_seed.py  test_hub_seed.py  test_imagery.py  test_integration_mqtt.py  test_publisher.py  test_reader.py  test_scenarios.py  test_utility_agent_golden.py  test_utility_info.py
vn_utility_agent/: .env.example  agent.py
web/: index.html
