[project]
name = "meter-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.6",
    "loguru>=0.7.3",
    "numpy>=2.5.0",
    "paho-mqtt>=2.1.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
