[project]
name = "meter-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.6",
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp>=1.28.1",
    "numpy>=2.5.0",
    "paho-mqtt>=2.1.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
edgesim = "edgesim.cli:main"

[build-system]
requires = ["uv_build>=0.7.19,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "edgesim"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: requires a running mosquitto on localhost:1883"]
# integration tests need a live broker — opt in with `pytest -m integration`
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
]
