[project]
name = "meter-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.6",
    "fastapi>=0.139.0",
    "google-auth>=2.55.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp>=1.28.1",
    "numpy>=2.5.0",
    "paho-mqtt>=2.1.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
edgesim = "edgesim.cli:main"

[build-system]
requires = ["uv_build>=0.7.19,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "edgesim"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires a running mosquitto on localhost:1883",
    "manual: live-network demo checks (deployed Agent Engine + ADC) — run explicitly",
]
# integration tests need a live broker, manual tests need GCP creds + network —
# both are opt-in: `pytest -m integration` / `pytest -m manual`.
addopts = "-m 'not integration and not manual'"

# `agent` is a default group so plain `uv sync` (local dev, CI) can type-check
# vn_utility_agent/. The Docker image opts out via `--no-default-groups` —
# google-adk and the aiplatform SDK are deploy-time tools, not hub runtime deps.
[tool.uv]
default-groups = ["dev", "agent"]

[dependency-groups]
agent = [
    "google-adk>=2.4.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.160.0",
]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
]
